# Thesis_ChoreographyTests

./: LICENSE  README.md
driver_nodelet/: CMakeLists.txt  choreography.cor  main.cpp
driver_nodelet/components/: Controller.cpp  Driver.cpp  Message.cpp  Nodelet.cpp  api.hpp
publisher_subscriber/: CMakeLists.txt  coreography.cor  main.cpp
publisher_subscriber/components/: Provider.hpp  Topic.hpp
publisher_subscriber1/: CMakeLists.txt  choreography.cor  main.cpp
publisher_subscriber1/components/: Message.hpp  Provider.hpp  Subscriber.hpp  Topic.hpp
publisher_subscriber2/: CMakeLists.txt  choreography.cor  main.cpp
publisher_subscriber2/components/: Message.hpp  Provider.hpp  Subscriber.hpp  Topic.hpp
